# homework_07

./: pyproject.toml
kanban/kanban/: settings.py  urls.py
kanban/project/: admin.py  models.py
kanban/project/migrations/: 0001_initial.py  0002_member.py  0003_rename_project_id_member_project_and_more.py  0004_status_task.py  0005_alter_task_project.py  0006_rename_project_task_project_id.py  0007_rename_project_id_task_project.py
